--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ body {
   height: 100%;
   display: flex;
 }
-a {
+a{
   text-decoration: none;
-  color: inherit;
+  color:inherit;
   /* display: flex; */
 }
 .navbar {
@@ -61,8 +61,7 @@ a {
 
 .down_arrow {
   padding-top: 10px;
-  padding-left: 15 <img src= "assests/settings 1.png" alt= "settings" / >
-    <p>Settings</p>px;
+  padding-left: 15px;
   padding-right: 15px;
 }
 
@@ -91,8 +90,7 @@ a {
 .home-feature,
 .chat-feature,
 .help-feature,
-.settings-feature,
-a {
+.settings-feature, a{
   display: flex;
   flex-direction: row;
   padding: 10px;
@@ -105,7 +103,7 @@ a {
 .chat-feature:hover,
 .help-feature:hover,
 .settings-feature:hover {
-  background-color: #f0f4f8;
+  background-color: #f0f4f8; 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -363,8 +361,8 @@ button.action-btn {
   transition: all 0.3s ease-in-out;
 }
 
-#delete-btn img {
-  padding-top: 2px;
+#delete-btn img{
+  padding-top:2px;
 }
 
 #delete-btn:hover {
